--- a/fpm.toml
+++ b/fpm.toml
@@ -9,10 +9,11 @@ keywords = ["dispersion-correction", "quantum-chemistry"]
 
 [dependencies]
 mctc-lib.git = "https://github.com/grimme-lab/mctc-lib"
-mctc-lib.tag = "v0.3.0"
+mctc-lib.tag = "v0.3.2"
 
 [dev-dependencies]
 mstore.git = "https://github.com/grimme-lab/mstore"
+mstore.tag = "v0.3.0"
 
 [build]
 auto-tests = false
@@ -20,6 +21,7 @@ auto-tests = false
 [[executable]]
 name = "s-dftd3"
 dependencies.toml-f.git = "https://github.com/toml-f/toml-f"
+toml-f.tag = "v0.4.1"
 
 [[test]]
 name = "tester"
