reactivate for macos

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -210,11 +210,10 @@ jobs:
         COVERAGE: ${{ matrix.build-type == 'coverage' }}
         MESON_ARGS: >-
           ${{ matrix.compiler == 'intel' && '-Dfortran_link_args=-qopenmp -Dapi=false' || '' }}
-
           ${{ contains(matrix.os, 'windows') && '-Dfortran_link_args=-Wl,--allow-multiple-definition' || '' }}
 
     - name: Configure build (CMake)
-      if: ${{ matrix.build == 'cmake' && ! contains(matrix.os, 'macos') }}
+      if: ${{ matrix.build == 'cmake' }}
       run: >-
         cmake -B${{ env.BUILD_DIR }}
         -GNinja
