--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -385,8 +385,9 @@ jobs:
       run: |
         pip list | grep dftd3
         export PYTHONPATH=$(pwd):$PYTHONPATH
-
-
+        ls -l $(find /opt/hostedtoolcache -name "_libdftd3*.so")
+        python3 -c "import dftd3.library; print(dftd3.library.__file__)"
+        echo $PYTHONPATH
     - name: Test Python API
       run: pytest --pyargs dftd3 --cov=dftd3 -vv -o log_cli=true --log-level=DEBUG
       env:
