--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -51,12 +51,12 @@ jobs:
         git mv {assets,python/dftd3}/parameters.toml
         git mv python/{mesonpep517,pyproject}.toml
         git commit -m "Python dist"
+    - name: Debug directory structure
+      run: |
+          echo "Inspecting the directory structure:"
+          ls -R /home/runner/work/simple-dftd3/simple-dftd3
     - run: |
         python -m build python/ --sdist --outdir . -n -v
-    - run: |
-        meson setup python/subprojects/s-dftd3/builddir
-        ninja -C python/subprojects/s-dftd3/builddir
-        ls python/subprojects/s-dftd3/builddir
     - uses: actions/upload-artifact@v4
       with:
         name: dftd3-python-sdist
